src/objects/EF_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airline</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EF_Relationships_Airline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Billing Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EF_Relationships_Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>EF_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Data Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_Location_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Location ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EF_Related_Records__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EF_Related_Records__c</referenceTo>
        <relationshipName>EF_LocationRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Distribution_Method_Code__c</fullName>
        <formula>IF(
	ISPICKVAL(Invoice_Distribution_Method__c, &apos;Electronic Via Platform&apos;), &apos;XBS4&apos;,
	IF(
		ISPICKVAL(Invoice_Distribution_Method__c, &apos;Electronic Via Email&apos;), &apos;XBE4&apos;,
		IF(
			ISPICKVAL(Invoice_Distribution_Method__c, &apos;Paper&apos;), &apos;XBP4&apos;,
			IF(
				ISPICKVAL(Invoice_Distribution_Method__c, &apos;No Invoice&apos;), &apos;XBN4&apos;,
				&apos;&apos;
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Distribution Method Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Distribution_Method__c</fullName>
        <globalPicklist>EF_Invoice_Distribution</globalPicklist>
        <label>Invoice Distribution Method</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>LDC. for me this field should be deleted</description>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Payment Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Code__c</fullName>
        <formula>IF(
	ISPICKVAL(Payment_Method__c, &apos;Credit Card&apos;), &apos;1&apos;,
	IF(
		ISPICKVAL(Payment_Method__c, &apos;SPCR / SPDR&apos;), &apos;A&apos;,
		IF(
			ISPICKVAL(Payment_Method__c, &apos;ICH&apos;), &apos;I&apos;,
			IF(
				ISPICKVAL(Payment_Method__c, &apos;Bank transfer&apos;), &apos;T&apos;,
				IF(
					ISPICKVAL(Payment_Method__c, &apos;Virtual Account Payment&apos;), &apos;V&apos;,
					IF(
						ISPICKVAL(Payment_Method__c, &apos;ICCS payments&apos;), &apos;Y&apos;,
						&apos;&apos;
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <globalPicklist>EF_Payment_Method</globalPicklist>
        <label>Payment Method</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Code__c</fullName>
        <formula>IF(
	ISPICKVAL(Payment_Terms__c, &apos;Payable immediately due net&apos;), &apos;0001&apos;,
	IF(
		ISPICKVAL(Payment_Terms__c, &apos;30 days after invoice date&apos;), &apos;0011&apos;,
		IF(
			ISPICKVAL(Payment_Terms__c, &apos;10 days after invoice date&apos;), &apos;0012&apos;,
			IF(
				ISPICKVAL(Payment_Terms__c, &apos;15 days after invoice date&apos;), &apos;0013&apos;,
				IF(
					ISPICKVAL(Payment_Terms__c, &apos;20 days after invoice date&apos;), &apos;0018&apos;,
					IF(
						ISPICKVAL(Payment_Terms__c, &apos;07 days after invoice date&apos;), &apos;Z007&apos;,
						&apos;&apos;
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <globalPicklist>EF_Payment_Terms</globalPicklist>
        <label>Payment Terms</label>
        <type>Picklist</type>
    </fields>
    <label>E&amp;F Airline Billing Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E&amp;F ABA-{0000}{MM}{YY}</displayFormat>
        <label>E&amp;F Airline Billing Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E&amp;F Airline Billing Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>